--- a/src/views/shortenID.ejs
+++ b/src/views/shortenID.ejs
@@ -16,22 +16,106 @@
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             crossorigin="anonymous"
         />
+
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6888941403766633"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <%- include('./partials/header.ejs') %>
 
-        <main>
-            <div class="get-link">
-                <p>Liên kết của bạn sẽ sẵn sàng trong vài giây nữa</p>
-                <div class="count-down">
-                    <h1 id="number-countdown">8 giây</h1>
+        <main class="main">
+            <div class="ads">
+                <script
+                    async
+                    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6888941403766633"
+                    crossorigin="anonymous"
+                ></script>
+                <!-- ads-doc2 -->
+                <ins
+                    class="adsbygoogle"
+                    style="display: block"
+                    data-ad-client="ca-pub-6888941403766633"
+                    data-ad-slot="5187843968"
+                    data-ad-format="auto"
+                    data-full-width-responsive="true"
+                ></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+            <div class="view-shorten">
+                <div class="ads-2">
+                    <script
+                        async
+                        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6888941403766633"
+                        crossorigin="anonymous"
+                    ></script>
+                    <!-- ads1 -->
+                    <ins
+                        class="adsbygoogle"
+                        style="display: block"
+                        data-ad-client="ca-pub-6888941403766633"
+                        data-ad-slot="8993409370"
+                        data-ad-format="auto"
+                        data-full-width-responsive="true"
+                    ></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
                 </div>
-                <input
-                    type="button"
-                    id="btn-getlink"
-                    class="btn btn-primary block"
-                    value="Get Link"
-                />
+                <div class="get-link">
+                    <p>Liên kết của bạn sẽ sẵn sàng trong vài giây nữa</p>
+                    <div class="count-down">
+                        <h1 id="number-countdown">8 giây</h1>
+                    </div>
+                    <input
+                        type="button"
+                        id="btn-getlink"
+                        class="btn btn-primary block"
+                        value="Get Link"
+                    />
+                </div>
+                <div class="ads-2">
+                    <script
+                        async
+                        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6888941403766633"
+                        crossorigin="anonymous"
+                    ></script>
+                    <!-- ads2 -->
+                    <ins
+                        class="adsbygoogle"
+                        style="display: block"
+                        data-ad-client="ca-pub-6888941403766633"
+                        data-ad-slot="8309106996"
+                        data-ad-format="auto"
+                        data-full-width-responsive="true"
+                    ></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+            </div>
+            <div class="ads">
+                <script
+                    async
+                    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6888941403766633"
+                    crossorigin="anonymous"
+                ></script>
+                <!-- ads-doc1 -->
+                <ins
+                    class="adsbygoogle"
+                    style="display: block"
+                    data-ad-client="ca-pub-6888941403766633"
+                    data-ad-slot="9400736939"
+                    data-ad-format="auto"
+                    data-full-width-responsive="true"
+                ></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
             </div>
         </main>
 
