--- a/src/views/listPost.ejs
+++ b/src/views/listPost.ejs
@@ -19,6 +19,9 @@
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             crossorigin="anonymous"
         />
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6888941403766633"
+        crossorigin="anonymous"></script>
     </head>
     <body class="body">
         <%- include('./partials/header.ejs') %>
