--- a/src/views/post.ejs
+++ b/src/views/post.ejs
@@ -72,6 +72,20 @@
                 </div>
             </div>
 
+
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6888941403766633"
+                crossorigin="anonymous"></script>
+            <!-- ads-ngang2 -->
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-6888941403766633"
+                data-ad-slot="5187843968"
+                data-ad-format="auto"
+                data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+
             <div class="post-other">
                 <h5>Các bài viết tương tự ></h5>
                 <div class="list-post">
@@ -100,6 +114,19 @@
 
                 </div>
             </div>
+
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6888941403766633"
+                crossorigin="anonymous"></script>
+            <!-- ads-ngang1 -->
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-6888941403766633"
+                data-ad-slot="9400736939"
+                data-ad-format="auto"
+                data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         </div>
 
         <%- include('./partials/footer.ejs') %>
