--- a/src/views/addPost.ejs
+++ b/src/views/addPost.ejs
@@ -60,6 +60,12 @@
                                 text-align: center;
                             "
                         >
+                            <option value="ngoc rong online lau">
+                                Ngọc rồng online lậu
+                            </option>
+                            <option value="ninja school online lau">
+                                Ninja school online lậu
+                            </option>
                             <option value="thu thuat">Thủ thuật</option>
                             <option value="ung dung">Ứng dụng</option>
                             <option value="game">Game</option>
